# slides

./: .gitignore  .gitmodules
20-12-2021-rcn-meetup-lockc/: slides.md
21-10-2021-suse-labs-conf-lockc/: slides.md
22-09-2021-rust-and-tell-bpf/: Makefile  slides.md
22-09-2021-rust-and-tell-bpf/aya/: Cargo.toml  README.md
22-09-2021-rust-and-tell-bpf/aya/aya-example/: Cargo.toml
22-09-2021-rust-and-tell-bpf/aya/aya-example-common/: Cargo.toml
22-09-2021-rust-and-tell-bpf/aya/aya-example-ebpf/: Cargo.toml
22-09-2021-rust-and-tell-bpf/aya/aya-example-ebpf/src/: main.rs
22-09-2021-rust-and-tell-bpf/aya/aya-example/src/: main.rs
22-09-2021-rust-and-tell-bpf/aya/xtask/src/: build_ebpf.rs
22-09-2021-rust-and-tell-bpf/c/: .gitignore  Makefile  fork_trace.bpf.c  fork_trace.c  vmlinux.h
22-09-2021-rust-and-tell-bpf/libbpf-rs/: Cargo.toml
22-09-2021-rust-and-tell-bpf/libbpf-rs/src/: main.rs
22-09-2021-rust-and-tell-bpf/libbpf-rs/src/bpf/: fork_trace.bpf.c  mod.rs  vmlinux.h
22-11-2021-lockc-helm-demo/: slides.md
aya/: index.html  package.json
aya-introduction/: index.html  main.js  package.json
aya-kernel/: index.html  package.json
bpf-llvm/: index.html  main.js  package.json
common/: vmlinux.h  vmlinux_5_14_6.h
light-protocol-shield/: index.html  package.json
lockc/: index.html  main.js  package.json
poseidon/: index.html  main.js  package.json
