[package]
name = "aya-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-example-common = { path = "../aya-example-common", features=["userspace"] }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
anyhow = "1.0.42"
ctrlc = "3.2"
simplelog = "0.10"
tokio = { version = "1.12", features = ["full"] }

structopt = { version = "0.3"}

[[bin]]
name = "aya-example"
path = "src/main.rs"
